chore: add filter based on availability
