# doc/api.yml
@@ -19,13 +19,13 @@ paths:
           name: page
           schema:
             type: integer
-          required: false
+          required: true
           description: Page number for pagination (default = 1).
         - in: query
           name: page_size
           schema:
             type: integer
-          required: false
+          required: true
           description: Number of results per page (default = 5).
       responses:
         '200':
@@ -36,7 +36,27 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/LayersAvailability'
-
+  /geoserver-layers:
+    get:
+      parameters:
+        - in: query
+          name: page
+          required: true
+        - in: query
+          name: page_size
+          required: true
+        - in: query
+          name: availability
+          required: false
+      responses:
+        '200':
+          description: List of layers availability
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/LayersAvailability'
 components:
   schemas:
     LayersAvailability:
